Assets/CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');

body {
    background-color: #24ce7b;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-size: 62.5%;
    font-family: 'Staatliches';
}

h1 {
    font-size: 5.4rem;
    color: #000000;
    margin-bottom: 5rem;
}

h2 {
    font-size: 4.2rem;
    margin-bottom: 4rem;
}

.container {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 80 rem;
    margin: 0 auto;
    padding: 2rem;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.flex-center {
    justify-content: center;
    align-items: center;
}

.justify-center {
    justify-content: center;
}

.text-center {
    text-align: center;
}

.hidden {
    display: none;
}

.btn {
    font-size: 2.4rem;
    padding: 2rem 0;
    width: 30rem;
    text-align: center;
    margin-bottom: 1rem;
    text-decoration: none;
    color: #ffffff;
    background: linear-gradient(90deg, #000000 0%, #000000 100%);
}

.btn:hover {
    cursor: pointer;
    transition: transform 150ms;
    transform: scale(1.03);
}

.btn[disable]:hover {
    cursor: not-allowed;
    box-shadow: none;
    transform: none;
}

.fa-play {
    font-size: 2.5rem;
    margin-left: 1rem;
}

.fa-trophy {
    font-size: 2.5rem;
    margin-left: 1rem;
}

/* End Page CSS */
.end-form-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 30rem;
}

input {
    margin-bottom: 1rem;
    width: 20rem;
    padding: 1.5rem;
    font-size: 1.8rem;
    border: none;
    box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
}

input::placeholder {
    color: #aaa;
}

#username {
    margin-bottom: 3rem;
    width: 100%;
    outline: none;
}

#end-text {
    font-size: 2.4rem;
    color: #fff;
    text-align: center;
}

#saveScoreBtn {
    border: none;
}

.fa-home {
    margin-left: 1rem;
    font-size: 2rem;
    color: #ffffff;
}

